--- a/css/style.css
+++ b/css/style.css
@@ -343,3 +343,11 @@ legend {
   width: 100%;
   height: auto;
 }
+#timeofday {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3a3a3a;
+  background: linear-gradient(0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%);
+  text-align: center;
+  font-size: 24px;
+  margin: 80px auto 0;
+}
